	  db/source/printer/287401.xml, db/source/printer/287657.xml,
	  db/source/printer/287689.xml: Removed the auto-detection entries
	  "(see notes)" and the "<unverified />" tags.

	* db/source/printer/59360.xml, db/source/printer/56608.xml:
	  Removed broken auto-detection data of Lexmark 2030 and NEC
	  Silentwriter 95f.

	* db/source/printer/Xerox-DocuPrint_N4512_PS.xml,
	  db/source/printer/Xerox-DocuPrint_N4512PS.xml: Corrected
	  name of the Xerox DocuPrint N4512PS.

2003-01-29  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/Epson-Stylus_C50.xml: Added Epson Stylus C50.

2003-01-28  Till Kamppeter <till.kamppeter@gmx.net>

	* COPYING: Added file containing the GPL.

2003-01-27  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/Epson-Stylus_CX?200.xml: Raised rating from
	  "Mostly" to "Perfectly". Both scanning and printing are fully
	  supported.

2003-01-23  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/pnm2ppa.xml: Changed link for Mac OS X
	  installer to Tyler Blessing's version.
	
2003-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/pnm2ppa.xml: Added link to Goeff Kruse's Mac OS
	  X installer.
	
2003-01-21  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: HP OfficeJet 600, 610, 625, 630, 635
	  have problems with HPIJS, switched recommended driver to
	  GIMP-Print and updated text appropriately.

	* db/source/printer/*.xml: Fixed printer ID entries for the HP
	  OfficeJet 520, 570, 580, 590.

2003-01-19  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/bjc250gs-Model.xml: Fixed default values.

2003-01-18  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: Updated texts for the Epson EPL-5700L,
	  EPL-5700, EPL-5800L, EPL-5800, EPL-5900L to mention that there
	  is a driver for the "L" models available now. Raised the rating
	  of the "L" models to "Partailly".

	* db/source/printer/Epson-Stylus_CX5200.xml: Updated instructions