@@ -530,7 +530,7 @@
    <id>printer/64288</id><!-- Xerox DocuPrint N32 -->
   </printer>
   <printer>
-   <id>printer/Xerox-DocuPrint_N4512_PS</id>
+   <id>printer/Xerox-DocuPrint_N4512PS</id>
   </printer>
  </printers>
 </driver>
