@@ -234,7 +234,7 @@
    <id>printer/Xerox-DocuPrint_N4512</id>
   </printer>
   <printer>
-   <id>printer/Xerox-DocuPrint_N4512_PS</id>
+   <id>printer/Xerox-DocuPrint_N4512PS</id>
   </printer>
   <printer>
    <id>printer/421586</id><!-- Okidata Okipage 10ex -->
