@@ -425,7 +425,7 @@
    <id>printer/Xerox-DocuPrint_N4512</id>
   </printer>
   <printer>
-   <id>printer/Xerox-DocuPrint_N4512_PS</id>
+   <id>printer/Xerox-DocuPrint_N4512PS</id>
   </printer>
   <printer>
    <id>printer/113888</id><!-- Xerox Document Centre 400 -->
