@@ -3182,7 +3182,7 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
-      <printer>printer/Xerox-DocuPrint_N4512_PS</printer>
+      <printer>printer/Xerox-DocuPrint_N4512PS</printer>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
