@@ -10,8 +10,12 @@
 	  Silentwriter 95f.
 
 	* db/source/printer/Xerox-DocuPrint_N4512_PS.xml,
-	  db/source/printer/Xerox-DocuPrint_N4512PS.xml: Corrected
-	  name of the Xerox DocuPrint N4512PS.
+	  db/source/printer/Xerox-DocuPrint_N4512PS.xml,
+	  db/source/driver/Postscript.xml, db/source/driver/lj5gray.xml,
+	  db/source/driver/lj5mono.xml, db/source/driver/ljet4.xml,
+	  db/source/opt/6.xml, db/source/opt/159.xml,
+	  db/source/opt/Postscript-Resoltion.xml: Corrected name of the
+	  Xerox DocuPrint N4512PS.
 
 2003-01-29  Till Kamppeter <till.kamppeter@gmx.net>
 
